--- a/app/views/movies/_form.html.slim
+++ b/app/views/movies/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for(@movie) do |f|
+= form_for @movie, html: { multipart: true } do |f|
   - if @movie.errors.any?
     #error_explanation
       h2
@@ -27,5 +27,9 @@
     = f.label :rating
     br
     = f.text_field :rating
+  .field
+    = f.label :image
+    br
+    = f.file_field :image
   .actions
     = f.submit
