--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,5 +7,9 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   body
-    p.notice= notice
-    = yield
+    = render 'layouts/header'
+    .container
+      - flash.each do |name, msg|
+        = content_tag(:div, msg, class: "alert alert-info")
+      
+      = yield
