--- a/app/views/movies/index.html.slim
+++ b/app/views/movies/index.html.slim
@@ -1,25 +1,9 @@
-p#notice= notice
-h1 Listing Movies
-table
-  thead
-    tr
-      th Title
-      th Description
-      th Movie length
-      th Director
-      th Rating
-      th colspan="3" 
-  tbody
-    - @movies.each do |movie|
-      tr
-        td= image_tag movie.image.url(:medium)
-        td= movie.title
-        td= movie.description
-        td= movie.movie_length
-        td= movie.director
-        td= movie.rating
-        td= link_to 'Show', movie
-        td= link_to 'Edit', edit_movie_path(movie)
-        td= link_to 'Destroy', movie, method: :delete, data: {confirm: 'Are you sure?'}  
-br
-= link_to 'New Movie', new_movie_path
+- if !user_signed_in?
+  .jumbotron
+    h1 Your Favourite Movies Reviewed
+    p= link_to "Sign Up To Write A Review", new_user_registration_path, class: "btn btn-primary btn-lg"
+.row
+  - @movies.each do |movie|
+    .col-sm-6.col-md-3
+      .thumbnail
+        = link_to image_tag(movie.image.url(:medium), class: "image"), movie
