--- a/app/views/reviews/_form.html.slim
+++ b/app/views/reviews/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for(@review) do |f|
+= form_for([@movie, @review]) do |f|
   - if @review.errors.any?
     #error_explanation
       h2
@@ -8,12 +8,16 @@
         - @review.errors.full_messages.each do |message|
           li= message
   .field
-    = f.label :rating
-    br
-    = f.number_field :rating
+    #star-rating
   .field
     = f.label :comment
     br
     = f.text_area :comment
   .actions
-    = f.submit
+    = f.submit 
+
+javascript:
+  $('#star-rating').raty({
+    path: '/assets/',
+    scoreName: 'review[rating]'
+  });
